chore: DB정보 및 package alias 삭제

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/bsm
+spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/PROD_MAIN
 spring.datasource.username=kabsung3
 spring.datasource.password=1q2w3e4r
 
@@ -8,9 +8,6 @@ spring.datasource.password=1q2w3e4r
 #spring.datasource.password=test
 
 #mybatis
-mybatis.type-aliases-package=com.example.bsm.vo
-mybatis.mapper-locations=classpath:/mapper/**/*.xml
-mybatis.type-aliases-package=com.example.bsm.dto
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 # model ???? camel case ??
