--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,4 @@ spring.datasource.password=1q2w3e4r
 
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
-
-# model ???? camel case ??
-mybatis.configuration.map-underscore-to-camel-case=true
-
-# mapper ???? ??
-logging.level.com.atoz_develop.mybatissample.repository=TRACE
-
-logging.level.root=DEBUG
+mybatis.type-aliases-package=com.example.demo
