--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=1q2w3e4r
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
+
+spring.security.oauth2.client.registration.google.client-id=714375721227-b5qnggehg26hli8kl7asu71dbgmqf76u.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=profile, email
