feat: bsm에서 구현한 SpringSecurity, JWT 가져오기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,17 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/PROD_MAIN
-spring.datasource.username=kabsung3
-spring.datasource.password=1q2w3e4r
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/PROD_MAIN
+#spring.datasource.username=kabsung3
+#spring.datasource.password=1q2w3e4r
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/bsm
 #spring.datasource.username=test
 #spring.datasource.password=test
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/saltlux?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
+spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/bsm?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=369369
 
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
