--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=1q2w3e4r
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
 
-#???????
-spring.servlet.multipart.location=${java.io.tmpdir}
+#파일 업로드 설정
+spring.servlet.multipart.location=C:/Users/PC/Documents/upload/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
