--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@
 #spring.datasource.password=test
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/saltlux?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
-#spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/prodmainproject?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
+#spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/saltlux?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
+spring.datasource.jdbc-url=jdbc:mysql://127.0.0.1:3306/prodmainproject?useUnicode=yes&characterEncoding=UTF-8&allowMultiQueries=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=369369
 
