--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,6 @@ logging.level.root=DEBUG
 
 #file
 #spring.servlet.multipart.location=${java.io.tmpdir}
-spring.servlet.multipart.location=C:\Users\mkpark\Desktop
+spring.servlet.multipart.location=C:/Users/mkpark/Desktop
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
