--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,10 +12,9 @@ spring.datasource.password=test
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
 
-logging.level.root=DEBUG
 
 #file
-#spring.servlet.multipart.location=${java.io.tmpdir}
-spring.servlet.multipart.location=C:/Users/mkpark/Desktop/
+spring.servlet.multipart.location=${java.io.tmpdir}
+#spring.servlet.multipart.location=C:/Users/mkpark/Desktop/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
