--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/PROD_MAIN
-#spring.datasource.username=kabsung3
-#spring.datasource.password=1q2w3e4r
+spring.datasource.jdbc-url=jdbc:mysql://bsm-db.crxvuwl6qayd.ap-northeast-2.rds.amazonaws.com:3306/PROD_MAIN
+spring.datasource.username=kabsung3
+spring.datasource.password=1q2w3e4r
 
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/prod_main
-spring.datasource.username=test
-spring.datasource.password=test
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/bsm
+#spring.datasource.username=test
+#spring.datasource.password=test
 
 #mybatis
 mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
 
-
-#file
-spring.servlet.multipart.location=${java.io.tmpdir}
-#spring.servlet.multipart.location=C:/Users/mkpark/Desktop/
+#?? ??? ??
+spring.servlet.multipart.location=C:/Users/PC/Documents/upload/
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
