--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
 
 #파일 업로드 설정
-spring.servlet.multipart.location=C:/Users/PC/Documents/upload/
+spring.servlet.multipart.location=
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
