feat: 이메일 발송 로직 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ mybatis.mapper-locations=classpath:/mapper/**/*.xml
 mybatis.type-aliases-package=com.example.demo
 
 #파일 업로드 설정
-spring.servlet.multipart.location=
+spring.servlet.multipart.location=./upload
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=50MB
 
@@ -26,3 +26,10 @@ spring.security.oauth2.client.registration.google.client-id=714375721227-b5qngge
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile, email
 
+# 이메일
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hs95blue@gmail.com
+spring.mail.password=gjymoaaefxdgiwqi
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
