--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // 이메일
+    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.0'
+
+
 }
 
 tasks.named('test') {
