feat: api 자동문서화

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ spring.mail.username=hs95blue@gmail.com
 spring.mail.password=gjymoaaefxdgiwqi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
