--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    all {
+        //logback과의 충돌 방지
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -50,7 +54,11 @@ dependencies {
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.7.0'
 
-
+    //  SQL 로그보기위한 라이브러리
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    // https://mvnrepository.com/artifact/org.bgee.log4jdbc-log4j2/log4jdbc-log4j2-jdbc4.1
+    implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.12'
+    // TODO log4j2 보안 취약점 떄문에 2.17.1버전을 사용하려고 했으나.. 드라이버가 도저히 임포트되지않아서 일단 구버전 사용.. 나중에 업글하자!
 }
 
 tasks.named('test') {
